# iceaggr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  QUICK_START.md  README.md  START_TRAINING.sh  TRAINING_COMMANDS.md  TRAINING_READY.md  config.template.yaml  pyproject.toml  pytest.ini  run_training.sh
.github/: BENCHMARKING.md
configs/: train_config.yaml  train_config_large.yaml  train_flat.yaml  train_flat_v2_linear.yaml  train_flat_v2_linear_K16_5M.yaml  train_flat_v2_linear_K41_10M.yaml  train_flat_v2_linear_K41_bighead.yaml  train_flat_v2_mlp.yaml  train_flat_v2_none.yaml  train_flat_v2_none_K41_5M.yaml  train_flat_v2_none_K41_bighead.yaml
notebooks/: 2024-10-04-T1-data-flow-analysis.ipynb  2025-10-04-dataset-experiemnts.ipynb  2025-10-04-dom-packing-analysis.ipynb  2025-10-04-flex-attention-data-structure.ipynb  2025-10-04-model-architecture-debug.ipynb  2025-11-05-dataset-tests.ipynb  t1_data_flow_analysis.ipynb
notes/: 03_dom_aggregation_architecture.md  05_flat_transformer_v2_results.md  README.md  TRAINING_FIX_SUMMARY.md  deepsets_dom_aggregation_plan.md  deepsets_pipeline_analysis.md  flex_attention_benchmark_results.md  hierarchical_transformer_architecture.md  performance_optimization_todo.md  t2_first_pulse_architecture.md
personal_notes/: training_failure_diagnosis_2025_10_05.md  training_session_2025_10_04_summary.md
scripts/: 2029_09_08_pulse_statistics.py  analyze_packing.py  benchmark_batch_aware_sampler.py  benchmark_data_loading.py  benchmark_e2e_pipeline.py  benchmark_flex_attention.py  benchmark_io.py  benchmark_vectorized.py  start_training.sh  (+16 more)
(+74 files in other folders)
